--- a/Noot/61524-back-of-the-line-mcu-fanfic^001/rus.textile
+++ b/Noot/61524-back-of-the-line-mcu-fanfic^001/rus.textile
@@ -12,9 +12,9 @@
 
 Рядом с Богомолом стояла — едва-едва — Небула, которая выглядела совершенно неспособной справиться с тем, что она испытывала. Пищевое отравление было явно чуждым понятием для этой инопланетной женщины, которая согнулась, тряслась и содрогалась, выглядя очень похожей на человека, который понятия не имел, как справиться с тем, что происходило внутри её тела. Мантис пыталась показать ей, что сжимание ягодиц руками может помочь ей удержаться, но синекожей даме такие вещи кажутся неестественными.
 
-По крайней мере, она не выглядела в таком состоянии, как Пегги Картер, которая, похоже, не знала, что с собой делать. Дейзи хорошо знала историю знаменитого агента Картера — она работала агентом в первой половине двадцатого века, задолго до того, как по телевизору показывали туалеты. Дейзи всегда было трудно (и она знала, что Мэй и Джемма чувствовали то же самое) признаться, когда ей нужно было в в*нную. Она могла только догадываться, насколько сильнее должно быть клеймо в сознании Пегги, и это во многом объясняет, почему англичанка казалась смущённой ещё больше, чем любая другая женщина. Брюнетка смотрела прямо перед собой, решительно сжимая щёки и бормоча что-то себе под нос со своим характерным акцентом. Дейзи не могла разобрать большую часть того, что говорила агент Картер, но она услышала слова «пожалуйста… не сейчас» и просто «мне нужно какать», когда Пегги говорила сама с собой.
+По крайней мере, она не выглядела в таком состоянии, как Пегги Картер, которая, похоже, не знала, что с собой делать. Дейзи хорошо знала историю знаменитого агента Картера — она работала агентом в первой половине двадцатого века, задолго до того, как по телевизору показывали туалеты. Дейзи всегда было трудно (и она знала, что Мэй и Джемма чувствовали то же самое) признаться, когда ей нужно было в туалет. Она могла только догадываться, насколько сильнее должно быть клеймо в сознании Пегги, и это во многом объясняет, почему англичанка казалась смущённой ещё больше, чем любая другая женщина. Брюнетка смотрела прямо перед собой, решительно сжимая щёки и бормоча что-то себе под нос со своим характерным акцентом. Дейзи не могла разобрать большую часть того, что говорила агент Картер, но она услышала слова «пожалуйста… не сейчас» и просто «мне нужно какать», когда Пегги говорила сама с собой.
 
-На одно место ближе к в*нной, но, выглядя так, будто она нуждалась в этом ещё больше, стояла Шури. Вакандиец полностью отказался от попыток скрыть свою мини-аварию из-за запаха, который, как всем было известно, не мог исходить ни от чего другого, кроме как от осколка. Вместо этого она стояла молча, с закрытыми глазами в какой-то молитве, прислонившись к стене. Дейзи подумала, не думает ли принцесса, что деревянные панели могут держать её попу закрытой, — она сомневалась, что это сработает. Затем была её коллега Мелинда Мэй, которая никогда ещё не выглядела так небрежно. На самом деле, в этот момент Дейзи подумала, что Мэй больше похожа на маленького ребёнка, который боится, что мать отругает её, если она попадёт в аварию. Мария Хилл завершила состав, беспокойно подпрыгивая рукой, схватив свою письку и жалуясь себе под нос, что она «собирается помочиться водопадом».
+На одно место ближе к туалету, но, выглядя так, будто она нуждалась в этом ещё больше, стояла Шури. Вакандиец полностью отказался от попыток скрыть свою мини-аварию из-за запаха, который, как всем было известно, не мог исходить ни от чего другого, кроме как от осколка. Вместо этого она стояла молча, с закрытыми глазами в какой-то молитве, прислонившись к стене. Дейзи подумала, не думает ли принцесса, что деревянные панели могут держать её попу закрытой, — она сомневалась, что это сработает. Затем была её коллега Мелинда Мэй, которая никогда ещё не выглядела так небрежно. На самом деле, в этот момент Дейзи подумала, что Мэй больше похожа на маленького ребёнка, который боится, что мать отругает её, если она попадёт в аварию. Мария Хилл завершила состав, беспокойно подпрыгивая рукой, схватив свою письку и жалуясь себе под нос, что она «собирается помочиться водопадом».
 
 Джемма была в таком отчаянии, что совершенно не заметила, как Хоуп Ван Дайн прыгнула в конец очереди.
 
@@ -26,7 +26,7 @@
 
 «Вы можете ходить и держать?» Джемма выстрелила в ответ. Хоуп задумалась на несколько секунд, а потом опустила голову.
 
-«Нет, — призналась она, — я наполню штаны задолго до того, как дойду до в*нной».
+«Нет, — призналась она, — я наполню штаны задолго до того, как дойду до туалета».
 
 «Думаю, я бы тоже, — сказала Дейзи, — я чувствую, что он пытается вырваться, я не знаю, как долго я смогу его сдерживать». В этот момент по комнате раздался ещё один пердеж, намного громче и ниже, чем всё, что они когда-либо слышали. Все в комнате повернулись и были потрясены, увидев Пегги Картер, согнутую в коленях, с пылающими щеками. Дейзи не могла поверить, что такой грубый шум может исходить от такой чопорной, приличной и миниатюрной дамы, но нельзя было отрицать, что она сорвала дыхание.
 
@@ -34,7 +34,7 @@
 
 — Что случилось, Пегги? — обеспокоенно спросила Дейзи.
 
-«Это был не просто… просто пук», — призналась Пегги. Ошеломлённая тишина была прервана великолепным звуком открывающейся защёлки. Шестнадцать нервных глаз повернулись к двери в*нной, которая болезненно медленно открылась. Вышла дама средних лет с бледным лицом, сопровождаемая неприятным запахом, который мог быть вызван только диареей, и много чего. Мария бросилась к ней сзади, дуя перед её носом и бормоча «о, спасибо, Боже». Незадолго до того, как она закрыла дверь, Мэй встала на пути.
+«Это был не просто… просто пук», — призналась Пегги. Ошеломлённая тишина была прервана великолепным звуком открывающейся защёлки. Шестнадцать нервных глаз повернулись к двери туалета, которая болезненно медленно открылась. Вышла дама средних лет с бледным лицом, сопровождаемая неприятным запахом, который мог быть вызван только диареей, и много чего. Мария бросилась к ней сзади, дуя перед её носом и бормоча «о, спасибо, Боже». Незадолго до того, как она закрыла дверь, Мэй встала на пути.
 
 «Мария, — умоляла она, — пожалуйста, поторопитесь. У меня не так много времени». Агент Хилл кивнула, уже расстёгивая джинсы, и заперла за собой дверь, чтобы наконец немного расслабиться.
 
@@ -78,7 +78,7 @@
 
 — Я тоже, но ты уверен, что хочешь встать в эту очередь? — многозначительно спросила Валькирия. — Похоже, ждать придётся слишком долго. Наташа раздражённо пожала плечами.
 
-«Я должен попытаться, Валк, или я намочу свои любимые джинсы... снова». Она вздрогнула от этой мысли и поковыляла за угол в сторону в*нной. Нат был более чем осведомлён о взглядах, которые бросали на неё другие обедающие, многие из которых наверняка узнали её по новостям. Знаменитая Чёрная Вдова, одна из Мстителей, прогуливается по оживлённому ресторану и явно хочет отлить.
+«Я должен попытаться, Валк, или я намочу свои любимые джинсы... снова». Она вздрогнула от этой мысли и поковыляла за угол в сторону туалета. Нат был более чем осведомлён о взглядах, которые бросали на неё другие обедающие, многие из которых наверняка узнали её по новостям. Знаменитая Чёрная Вдова, одна из Мстителей, прогуливается по оживлённому ресторану и явно хочет отлить.
 
 Сначала Наташа пыталась убедить себя, что это не заметно, но быстро перестала себя обманывать — буквально извивалась на ходу, руки безуспешно пытались не возиться с передом джинсов, ноги неестественно перекрещивались, попка немного торчала из-за того, как она была сгорблена.
 
@@ -120,7 +120,7 @@
 
 ###
 
-Мэй, Пегги, Небула, Богомол, Джемма, Дейзи, Хоуп. Мария заперлась в единственной в*нной комнате, страдая от взрывной диареи, которая, казалось, не заканчивалась. Шури ушла, чтобы попытаться найти место, где можно облегчиться, почти наверняка обречённая испортить свои джинсы. По иронии судьбы, подумал Мантис, они были далеко не собраны прямо сейчас.
+Мэй, Пегги, Небула, Богомол, Джемма, Дейзи, Хоуп. Мария заперлась в единственном туалете, страдая от взрывной диареи, которая, казалось, не заканчивалась. Шури ушла, чтобы попытаться найти место, где можно облегчиться, почти наверняка обречённая испортить свои джинсы. По иронии судьбы, подумал Мантис, они были далеко не собраны прямо сейчас.
 
 Не то чтобы она была в каком-либо положении, чтобы судить. Она никогда не страдала от газа, как сейчас, её попа разрывалась каждые несколько секунд, и она была совершенно бессильна остановить это. Хотя она никогда не была большой какашкой — небольшие количества были её нормой, — Мантис могла сказать, что это вот-вот изменится, только от каменного веса в её животе. Её анус буквально дрожал от попытки сдержать его, и в глубине души она знала, что не сможет удержать дерьмо в страхе, пока не придёт её конец. Будучи застенчивой в своих телесных функциях, она просто не знала, что ещё делать. В тщетных попытках отвлечься от какашек, которые вот-вот испортят её любимое нижнее бельё.
 
@@ -168,7 +168,7 @@
 
 ###
 
-Вид Небулы, превращающейся в богато украшенное растение в горшке, в сочетании с хлюпающим, разбрызгивающим звуком её взрывного облегчения, было слишком тяжело для Джеммы Симмонс. Не в силах стоять и смотреть ни секунды дольше, она попятилась из ниши, где стояла в*нная, и направилась в главный ресторан. Она смутно осознавала три вещи: моча, стекающая по её левой ноге, Дейзи, следовавшая за ней, и глаза почти всех в комнате, следившие за каждым её движением. Джемма знала, что проигрывает битву. Она почувствовала рывок на руке. Это был голос Дейзи.
+Вид Небулы, превращающейся в богато украшенное растение в горшке, в сочетании с хлюпающим, разбрызгивающим звуком её взрывного облегчения, было слишком тяжело для Джеммы Симмонс. Не в силах стоять и смотреть ни секунды дольше, она попятилась из ниши, где был туалет, и направилась в главный ресторан. Она смутно осознавала три вещи: моча, стекающая по её левой ноге, Дейзи, следовавшая за ней, и глаза почти всех в комнате, следившие за каждым её движением. Джемма знала, что проигрывает битву. Она почувствовала рывок на руке. Это был голос Дейзи.
 
 «Джемма, — сказал он, — куда ты идёшь?». Но как она ни старалась, биохимик едва могла произнести всего два слова.
 
@@ -178,17 +178,17 @@
 
 ###
 
-Мария Хилл, наконец, вышла из в*нной, с раскрасневшимся лицом и чувством жопы более чем нечистым, увидев, как Небула справляет нужду в растении калатеи. Пока она пыталась совладать с шоком от такого зрелища, она почувствовала, как кто-то прошёл мимо неё. Это была Мелинда Мэй, ворвавшаяся в в*нную, как будто она не могла терять ни секунды, и уже сдирала свою нижнюю половину. Непреднамеренно Мария мельком увидела бритую письку Мэй, прежде чем другая женщина захлопнула и заперла дверь. Громкий стон и брызги, доносившиеся из комнаты, свидетельствовали о том, что Мэй успела как раз вовремя.
+Мария Хилл, наконец, вышла из туалета, с раскрасневшимся лицом и чувством жопы более чем нечистым, увидев, как Небула справляет нужду в растении калатеи. Пока она пыталась совладать с шоком от такого зрелища, она почувствовала, как кто-то прошёл мимо неё. Это была Мелинда Мэй, ворвавшаяся в туалет, как будто она не могла терять ни секунды, и уже сдирала свою нижнюю половину. Непреднамеренно Мария мельком увидела бритую письку Мэй, прежде чем другая женщина захлопнула и заперла дверь. Громкий стон и брызги, доносившиеся из комнаты, свидетельствовали о том, что Мэй успела как раз вовремя.
 
 «Что здесь происходит?» — спросила она с открытым ртом.
 
 «Небула какает в том растении, — объяснила Мантис, подпрыгивая на месте, — я сказала ей не делать этого. И Шури ушла. А Джемма немного помочилась на пол — смотри!» она беспомощно указала на очевидное тёмное пятно на ковре, куда Джемма явно не попала.
 
-— О, чёрт, — сказала Мария. Она знала, что должна беспокоиться о благополучии своих товарищей по ЩИТу. Агенты, но явное облегчение от того, что она вовремя добралась до в*нной, было всем, о чём она могла сейчас думать. Или, по крайней мере, почти успел вовремя. Было что-то вроде разлива на пол как раз перед тем, как ей удалось поставить свою попу на уровень унитаза, правда, но никто никогда не должен был знать. Она определённо не собиралась никому рассказывать.
+— О, чёрт, — сказала Мария. Она знала, что должна беспокоиться о благополучии своих товарищей по ЩИТу. Агенты, но явное облегчение от того, что она вовремя добралась до туалета, было всем, о чём она могла сейчас думать. Или, по крайней мере, почти успел вовремя. Было что-то вроде разлива на пол как раз перед тем, как ей удалось поставить свою попу на уровень унитаза, правда, но никто никогда не должен был знать. Она определённо не собиралась никому рассказывать.
 
 По какой-то причине она не могла оторвать глаз от Небулы, которая смотрела в полнейшем экстазе. Её глаза были закатаны, гладкая голова, рот открыт, жидкое дерьмо всё ещё выливалось из неё, как лава. Вонь была почти невыносимой. Мария повернулась к Богомолу, сочувствуя бедной девочке, которая, как она знала, была слишком застенчива, чтобы использовать растение, как её подруга.
 
-«Когда я вижу её, мне просто хочется покакать ещё сильнее», — простонала Мантис, схватив её за попу, как будто она пыталась удержать её. получил удар в живот. Все головы повернулись к Пегги, о которой они даже забыли. Англичанка оказалась в начале очереди, но по виду её согнутой в коленях, схватившейся за живот, казалось, что ждать она долго не сможет. Пегги постучала в дверь в*нной костяшками пальцев, хотя её вежливый вид был едва виден.
+«Когда я вижу её, мне просто хочется покакать ещё сильнее», — простонала Мантис, схватив её за попу, как будто она пыталась удержать её. получил удар в живот. Все головы повернулись к Пегги, о которой они даже забыли. Англичанка оказалась в начале очереди, но по виду её согнутой в коленях, схватившейся за живот, казалось, что ждать она долго не сможет. Пегги постучала в дверь туалета костяшками пальцев, хотя её вежливый вид был едва виден.
 
 — Мэй, поторопись, пожалуйста. Я тебя умоляю, — крикнула она сквозь густую древесину. Она извивалась так, как Мария никогда раньше не видела. «Если я не буду в туалете через тридцать секунд, я не успею».
 
@@ -228,7 +228,7 @@
 
 «Мэй! Открой чёртову дверь!»
 
-Мантис был потрясён языком Пегги, который со временем становился всё более вульгарным. Прошло уже несколько минут с тех пор, как Мэй заперлась в в*нной, и она была уже не на грани отчаяния, но казалось, что Пегги была ещё близка к тому, чтобы сломаться.
+Мантис был потрясён языком Пегги, который со временем становился всё более вульгарным. Прошло уже несколько минут с тех пор, как Мэй заперлась в туалете, и она была уже не на грани отчаяния, но казалось, что Пегги была ещё близка к тому, чтобы сломаться.
 
 — Мэй, умоляю тебя, открой дверь, а то я прямо здесь обосрусь. она снова стучала в дверь кулаком, зная, что это бесполезно. С другой стороны, Мэй много извинялась, говоря им, что это не прекратится. — Из меня тоже выходит, придурок! — крикнула Пегги. Она повернулась к другим женщинам, лицо всё ещё скривилось от боли. Небула вытирала зад листом, который она безжалостно сорвала с погибшего растения, Богомол пукал, как матрос, а Хоуп стала приседать на корточки, подпрыгивая на ступнях в надежде сохранить своё дерьмо внутри.
 
@@ -276,15 +276,15 @@
 
 ###
 
-Дейзи снова подошла к концу очереди как раз в тот момент, когда Мэй наконец вышла из в*нной. Она выглядела совершенно подавленной, когда Мантис промчался мимо неё и запер дверь, опустившись на колени рядом с униженной и бесчеловечной Пегги, чтобы снова и снова извиняться. Дейзи, со своей стороны, не могла позволить себе уделять им много внимания. Она приближалась к своей собственной грязной аварии, как бы ей не хотелось это признавать.
+Дейзи снова подошла к концу очереди как раз в тот момент, когда Мэй наконец вышла из туалета. Она выглядела совершенно подавленной, когда Мантис промчался мимо неё и запер дверь, опустившись на колени рядом с униженной и бесчеловечной Пегги, чтобы снова и снова извиняться. Дейзи, со своей стороны, не могла позволить себе уделять им много внимания. Она приближалась к своей собственной грязной аварии, как бы ей не хотелось это признавать.
 
-Но её немного утешало то, что Хоуп Ван Дайн стало намного хуже. Оса выглядела так, как будто ей не помешал бы её костюм, чтобы просто сжаться и полететь в ближайшую в*нную, но вместо этого она была бессильна и была на грани того, чтобы обосраться. Неудивительно, что Дейзи наблюдала за происходящим всего несколько секунд, прежде чем стали слышны уже знакомые шумы кишечника, начинающего опорожняться. Хоуп оперлась рукой о стену и наклонилась вперёд. Все прекратили свои занятия, привлечённые звуками Хоуп, проигрывающей битву своим телом.
+Но её немного утешало то, что Хоуп Ван Дайн стало намного хуже. Оса выглядела так, как будто ей не помешал бы её костюм, чтобы просто сжаться и полететь в ближайший туалет, но вместо этого она была бессильна и была на грани того, чтобы обосраться. Неудивительно, что Дейзи наблюдала за происходящим всего несколько секунд, прежде чем стали слышны уже знакомые шумы кишечника, начинающего опорожняться. Хоуп оперлась рукой о стену и наклонилась вперёд. Все прекратили свои занятия, привлечённые звуками Хоуп, проигрывающей битву своим телом.
 
 «Ребята, извините, но это слишком больно. Я не могу, — она захрипела, содрогнулась и начала отпускать, — сдерживаться дольше». Дейзи была загипнотизирована изображением красивой одежды Хоуп, которая стала коричневой, и она была не единственной — Кэрол и Валькирия не могли оторвать от этого глаз.
 
 — Вот дерьмо, Оса? Наташа подошла к месту происшествия, присоединившись к концу очереди, явно на последнем издыхании. За ней последовали Гамора и Окойе, первая пукнула на ходу, а второй всё ещё удавалось сохранять самообладание с некоторым усилием. Всё ещё опорожняя себя, Хоуп вышла из строя и, спотыкаясь, побрела в другую сторону зала, довольствуясь тем, что мирно закончила свою аварию.
 
-Очередь теперь была почти такой же длинной, как и раньше. Хоуп была так близка к тому, чтобы добраться до в*нной, но из-за того, что Мантис звучала так, будто она вышибала себе мозги внутри, Оса просто не смогла устоять. Следующей в очереди была Кэрол Дэнверс, которая держала свою письку так сильно, как только могла, и держала ноги вместе. Валькирия стояла позади неё, отчаянно извиваясь и извиваясь, но, казалось, не в силах отвести взгляд от разрывающегося тела Кэрол.
+Очередь теперь была почти такой же длинной, как и раньше. Хоуп была так близка к тому, чтобы добраться до туалета, но из-за того, что Мантис звучала так, будто она вышибала себе мозги внутри, Оса просто не смогла устоять. Следующей в очереди была Кэрол Дэнверс, которая держала свою письку так сильно, как только могла, и держала ноги вместе. Валькирия стояла позади неё, отчаянно извиваясь и извиваясь, но, казалось, не в силах отвести взгляд от разрывающегося тела Кэрол.
 
 Рядом стояла Дейзи, которая была уверена, что ей придётся выбросить трусики, что бы ни случилось дальше. Наташа Романофф танцевала позади неё, как ребёнок, делая всё возможное, чтобы сохранить контроль. Затем подошла Гамора, которая расстегнула джинсы, пытаясь уменьшить давление, а это означало, что её чёрное нижнее бельё было отчётливо видно — хотя её это, похоже, не волновало. Наконец, Окой стоически встала, позволяя себе лишь время от времени быстро сжимать свои подтянутые ягодицы, когда ей казалось, что никто не смотрит.
 
@@ -296,7 +296,7 @@
 
 «О, так намного лучше!»
 
-Это была Мантис, которая, наконец, перестала какать достаточно надолго, чтобы подтянуть джинсы и выйти из в*нной. Никто не был в состоянии её слушать, когда Кэрол направилась к двери, но Валькирия остановила её, дёрнув за рукав.
+Это была Мантис, которая, наконец, перестала какать достаточно надолго, чтобы подтянуть джинсы и выйти из туалета. Никто не был в состоянии её слушать, когда Кэрол направилась к двери, но Валькирия остановила её, дёрнув за рукав.
 
 «Если ты войдёшь без меня, я обосрусь, Кэрол, — объяснил асгардец, — у меня есть идея».
 
@@ -326,7 +326,7 @@
 
 «Договорились», — согласилась Гамора, прежде чем добавить: «Окойе, послушай, мы все знаем, что ты отчаянно хочешь уйти, так почему бы тебе просто не признать это? Мы все здесь женщины, в этом нет ничего постыдного, просто… ...танцуй, извивайся, делай, что хочешь». Окойе задумалась на секунду, и Гамора увидела в её глазах, что она обдумывает это. — Всё в порядке, — ободряюще спросила она. Окойе разочарованно вздохнула и начала неохотно шевелиться.
 
-«Хорошо, — признала она, — мне очень хочется в в*нную». Она сделала паузу, выглядя так, как будто с неё сняли тяжесть: «Вау. Так приятно говорить это вслух. При исполнении служебных обязанностей признать такую необходимость было бы постыдно».
+«Хорошо, — признала она, — мне очень хочется в туалет». Она сделала паузу, выглядя так, как будто с неё сняли тяжесть: «Вау. Так приятно говорить это вслух. При исполнении служебных обязанностей признать такую необходимость было бы постыдно».
 
 «Да, ну, ты не в своём роде… о нет, — захлебнулась Гамора, силясь закончить фразу, — пора». Наташа подошла к ней поближе, высвободила руку из ноющей письки и схватила Гамору за оба плеча.
 
@@ -338,7 +338,7 @@
 
 «Мне жаль!»
 
-— И для меня тоже, — раздался голос Окойе. Все женщины в комнате повернулись на этот звук, чтобы посмотреть на неё, потому что в голосе Окойе было что-то, чего они никогда раньше не слышали, — страх. «Я не могу это остановить!» она начала паниковать, все её попытки казаться возбуждёнными и контролируемыми, наконец, догнали её: «Мне нужно в в*нную сейчас же!» Она бросилась к двери, ударила в неё кулаком, пошла открывать ручку — но всё было бесполезно. Конечно, Кэрол заперла комнату, и это обрекло бедную Окойе из Ваканды. Тяжело дыша, она повернулась и увидела рядом с собой Шури.
+— И для меня тоже, — раздался голос Окойе. Все женщины в комнате повернулись на этот звук, чтобы посмотреть на неё, потому что в голосе Окойе было что-то, чего они никогда раньше не слышали, — страх. «Я не могу это остановить!» она начала паниковать, все её попытки казаться возбуждёнными и контролируемыми, наконец, догнали её: «Мне нужно в туалет сейчас же!» Она бросилась к двери, ударила в неё кулаком, пошла открывать ручку — но всё было бесполезно. Конечно, Кэрол заперла комнату, и это обрекло бедную Окойе из Ваканды. Тяжело дыша, она повернулась и увидела рядом с собой Шури.
 
 «Всё в порядке, Окойе, — сказала ей принцесса, — пусть это произойдёт». Этого разрешения было достаточно.
 
